@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.315 2007-01-12 01:55:39 guerra000 Exp $
+ * $Id: ChangeLog,v 1.316 2007-01-13 14:16:46 declan2005 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+
+2007-01-13 9:10 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
+  * source/c_cursor.c
+    * uncomented cursorwait()  function.
 
 2007-01-11 08:52 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_grid.c
